2001-08-20  Akim Demaille  <akim@epita.fr>

	* configure.ac (AT_CONFIG): Fix the path.
	* m4/atconfig.m4 (AT_CONFIG): Don't use EOF but ATEOF so that 2.52
	can be used.

2001-08-20  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* lib/autoconf/c.m4 (AC_C_BIGENDIAN): Prepare the cross-compile
	program with AC_LANG_PROGRAM before feeding it to
	AC_COMPILE_IFELSE.  Cleanup grep usage.

2001-08-20  Akim Demaille  <akim@epita.fr>

	* ChangeLog, ChangeLog.0, ChangeLog.1, ChangeLog.2, AUTHORS, BUGS,
	* NEWS, README, README-alpha, TODO, tests/README: This package is
	`Autoconf', not `autoconf' (the executable).

2001-08-20  Akim Demaille  <akim@epita.fr>

	Info readers seem to need `Index' in the index node title :(

	* doc/autoconf.texi: Reverse the 2001-08-15 change which
	simplified index node names.

2001-08-20  Akim Demaille  <akim@epita.fr>

	* lib/autoconf/general.m4 (_AC_INIT_PACKAGE): Warn if the
	arguments are not literals.
	* doc/autoconf.texi (Input) <AC_INIT>: Arguments must be literals.
	Specify the output variables, and macros defined.

2001-08-20  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Examining Declarations) <AC_TRY_CPP>:
	(Examining Syntax) <AC_TRY_COMPILE>
	(Examining Libraries) <AC_TRY_LINK>
	(Test Programs) <AC_TRY_RUN>: These macros double quote some of
	their arguments.
	Reported by Werner Lemberg.

2001-08-20  Akim Demaille  <akim@epita.fr>

	* lib/autotest/general.m4 (AT_INIT): Compute top_builddir,
	top_srcdir and srcdir from at_topbuild_2_topsrc and at_testdir.
	Load atlocal late enough to dump it in the log.
	* m4/atconfig.m4 (AT_CONFIG): Pass them to atconfig.

2001-08-20  Akim Demaille  <akim@epita.fr>

	* tests/torture.at (Configuring subdirectories): New test.
	* lib/autoconf/general.m4 (_AC_INIT_SRCDIR): Say what you are
	looking for.
	* m4/atconfig.m4: Be sure the let $[0] be expandable.
	(top_srcdir): Fix its computation.

2001-08-20  Akim Demaille  <akim@epita.fr>
