@@ -1,3 +1,9 @@
+2001-08-22  Akim Demaille  <akim@epita.fr>
+
+	* lib/m4sugar/m4sh.m4 (AS_MKDIR_P): Fail if fails.
+	* lib/autoconf/general.m4 (_AC_OUTPUT_SUBDIRS): Adjust.
+	(AC_SITE_LOAD): Better logging of config.site.
+
 2001-08-20  Akim Demaille  <akim@epita.fr>
 
 	* configure.ac (AT_CONFIG): Fix the path.
